# crap4code

./: .gitignore  AGENTS.md  README.md  pyproject.toml  spec.md
.github/workflows/: ci.yml  release.yml
.planning/execution/: README.md  ROADMAP.md  tasks.json
.planning/execution/handoffs/wave-5-verification-gate/: w5-1-implementation.md  w5-2-release-readiness.md
docs/: contracts.md  release-checklist.md
src/crap4code/: __init__.py  cli.py  main.py
src/crap4code/analyzers/: __init__.py  base.py  js_family.py  python.py  rust.py
src/crap4code/core/: __init__.py  config.py  coverage.py  crap_score.py  files.py  git_changed.py  models.py  recommendations.py  report.py  thresholds.py
src/crap4code/languages/: __init__.py  base.py  registry.py
src/crap4code/languages/javascript/: __init__.py  analyzer.py
src/crap4code/languages/python/: __init__.py  analyzer.py
src/crap4code/languages/rust/: __init__.py  analyzer.py
tests/: test_cli.py  test_coverage_mapping.py  test_crap_score.py  test_javascript_analyzer.py  test_python_analyzer.py  test_rust_analyzer.py  test_sample_projects.py  test_thresholds.py
tests/fixtures/javascript/: sample.js
tests/fixtures/python/: sample.py
tests/fixtures/rust/: sample.rs
tests/sample_projects/javascript_repo/: .crap4code.toml
tests/sample_projects/javascript_repo/coverage/: lcov.info
tests/sample_projects/javascript_repo/src/: sample.js
tests/sample_projects/mixed_repo/: .crap4code.toml
tests/sample_projects/mixed_repo/coverage/: lcov.info  python.xml
tests/sample_projects/mixed_repo/src/javascript/: sample.js
tests/sample_projects/mixed_repo/src/rust/: sample.rs
tests/sample_projects/python_repo/: .crap4code.toml
tests/sample_projects/python_repo/src/: sample.py
tests/sample_projects/rust_repo/: .crap4code.toml
tests/sample_projects/rust_repo/coverage/: lcov.info
tests/sample_projects/rust_repo/src/: sample.rs
