[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crap4code"
version = "0.3.0"
description = "Multi-language CRAP analyzer for Python, JavaScript/TypeScript, and Rust"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "jarmen423"}
]
keywords = ["crap", "code-quality", "coverage", "cyclomatic-complexity", "static-analysis"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "tree-sitter>=0.25.0",
  "tree-sitter-javascript>=0.25.0",
  "tree-sitter-typescript>=0.23.0",
  "tree-sitter-rust>=0.24.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "coverage>=7.8",
  "pytest>=9.0",
  "twine>=6.1",
]

[project.urls]
Homepage = "https://github.com/jarmen423/crap4code"
Repository = "https://github.com/jarmen423/crap4code"
Issues = "https://github.com/jarmen423/crap4code/issues"

[project.scripts]
crap4code = "crap4code.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
